test/negative/BadVoid3.java
public class BadVoid3 {
    public BadVoid3() {
        int x = 7;
        int y = (void)x;
    }
}
